--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AleksandraMackiewicz.github.io/cv",
+  "homepage": "https://aleksandramackiewicz.github.io/cv",
   "name": "cv-app",
   "version": "0.1.0",
   "private": true,
